@@ -46,3 +46,9 @@ using System.Runtime.CompilerServices;
 
 [assembly: AssemblyDelaySign(false)]
 [assembly: AssemblyKeyFile("")]
+
+#if LOG4NET
+// let log4net use .exe.config file
+[assembly: log4net.Config.XmlConfigurator]
+#endif
+
